feat: content & channel domain changed
Content
- Study 타입 제거
- 공모전/대외활동 컨텐츠 이외의 타입 추가 가능성 있어, Content detail 부분을 분리하기로 결정
- extra_content_detail - Detail Entity 추가
- 변경된 entity 에 따른 Content API 전면 수정
- 변경된 API Service Test Code 작성

Channel
- channel_detail 추가
- 기존 study 타입 channel 로 옮김
- 기존 channel 데이터 channel_detail 로 옮김
- channel_link relation table 추가
- 정의 후 테스트 미완

DB Migration
- 변경점이 매우 많기 때문에 initial version 제거

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,6 +24,7 @@
         <button id="submit" class="w-100 mt-3 btn btn-lg btn-primary" th:onclick="login();">Sign in</button>
     </div>
     <a th:href="@{/admin/sign-up}" class="w-100 mt-3 btn btn-lg btn-primary">Sign up</a>
+    <script th:src="@{/js/initXhr.js}"></script>
     <script th:src="@{/js/callApi.js}"></script>
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/addEventSubmitBtn.js}"></script>
